# red

./: .gitignore  Cargo.toml  flake.nix  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: mobil-model.md  traffic-models.md
rendering/: Cargo.toml
rendering/src/: lib.rs
simulation/: Cargo.toml
simulation/src/: arena.rs  lib.rs  prelude.rs  road.rs  spawner.rs
simulation/src/driver/: blinker.rs  gap.rs  idm.rs  mod.rs  occupancy.rs  pathfinding.rs  vehicle.rs  yielding.rs
web/: bun.lockb  package.json  vite.config.ts
web/public/: CNAME
web/src/: App.svelte  main.ts
web/src/lib/components/: RenderWindow.svelte
