[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.17.3"
bevy_app = "0.17.3"
bevy_time = "0.17.3"
bevy_log = "0.18.0"
glam = "0.30.9"
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
